--- a/product-manager.html
+++ b/product-manager.html
@@ -41,18 +41,18 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Delhi/NCR, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/vroom/24f8e9a6-3f93-4b93-9e64-c9ee15e214ba'>Vroom - Sr. Product Manager (Data & API Platforms)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://studygroupuk.applytojob.com/apply/hhpMyngAjj/Online-Learning-Product-Manager'>Online Learning Product Manager - Study Group - Career Page</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sofi/job/oVgrbfwx'>SoFi Careers - Staff Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sofi/job/oVgrbfwx'>SoFi Careers - Staff Product Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light">St. Louis, Missouri</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qBn9VfwM&k=Job&j=ouBcbfwc&__jvst=Employee&__jvsd=sspIUgwe&__jvsc=Twitter&bid=n0TSmMwo'>BlueJeans Careers - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qBn9VfwM&k=Job&j=ouBcbfwc&__jvst=Employee&__jvsd=sspIUgwe&__jvsc=Twitter&bid=n0TSmMwo'>BlueJeans Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -152,11 +152,11 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/snapdocs/f3a4f1a5-1da6-44bb-a009-09d2d283a2d4'>Snapdocs, Inc. - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/snapdocs/f3a4f1a5-1da6-44bb-a009-09d2d283a2d4'>Snapdocs, Inc. - Product Manager</a></h5> 
 <p><span class="badge badge-light">Denver  Denver Denver Denver</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -220,7 +220,7 @@
 <p><span class="badge badge-light">San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/graphcore/jobs/4494582002'>Job Application for Senior Product Manager - Firmware at Graphcore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphcore/jobs/4494582002'>Job Application for Senior Product Manager - Firmware at Graphcore</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -244,7 +244,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
+<h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -252,7 +252,7 @@
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cosential/1010b7c5-df0f-4c0c-8a01-b10866c8feed'>Cosential - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cosential/1010b7c5-df0f-4c0c-8a01-b10866c8feed'>Cosential - Product Manager</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -286,7 +286,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://the-well.breezy.hr/p/cdf642a6e19b-senior-product-manager-casino-poker-content'>Senior Product Manager (Casino/Poker Content) at The Well - Creative Consultants</a></h5> 
+<h5><a href='https://the-well.breezy.hr/p/cdf642a6e19b-senior-product-manager-casino-poker-content'>Senior Product Manager (Casino/Poker Content) at The Well - Creative Consultants</a></h5> 
 <p><span class="badge badge-light">Halifax, NS</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -294,7 +294,7 @@
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tophat/da46caf1-c895-4dff-8afd-8c9b249d4e09'>Top Hat - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tophat/da46caf1-c895-4dff-8afd-8c9b249d4e09'>Top Hat - Product Manager</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -344,7 +344,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/breathelife/jobs/4497907002'>Job Application for Product Owner at Breathe Life</a></h5> 
+<h5><a href='https://boards.greenhouse.io/breathelife/jobs/4497907002'>Job Application for Product Owner at Breathe Life</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -399,7 +399,7 @@ Pushing the boundaries of what's possible in advanced machine learning?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698275796-marketing-technology-product-manager'>Traveloka Marketing Technology Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698275796-marketing-technology-product-manager'>Traveloka Marketing Technology Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -440,7 +440,7 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4497581002'>Job Application for (Senior) Product Owner Digital Banking  (f/m/div) at solarisBank AG at solarisBank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4497581002'>Job Application for (Senior) Product Owner Digital Banking  (f/m/div) at solarisBank AG at solarisBank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
