--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=szZSJfwT&__jvsc=Twitter&bid=nUy2mMw7'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://pubnative.join.com/jobs/466577-senior-site-reliability-engineer-m-f-div'>Job @ PubNative (Berlin): Senior Site Reliability ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -66,7 +70,7 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1897662'>Job Application for Senior Site Reliability Engineer, APAC (Based in Singapore) at foodpanda Philippines</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1897662'>Job Application for Senior Site Reliability Engineer, APAC (Based in Singapore) at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -94,7 +98,7 @@
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1754191?gh_src=ca1f0ac71'>Job Application for Site Reliability Engineer at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1754191?gh_src=ca1f0ac71'>Job Application for Site Reliability Engineer at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -130,11 +134,11 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cameo.breezy.hr/p/2cb15f7cf710-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
+<h5><a href='https://cameo.breezy.hr/p/2cb15f7cf710-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -261,7 +265,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -275,7 +279,7 @@ customer experience, and increase the overall value of supported applications.</
 Engineering; Experienced. Share. Theorem is a software consultancy that 
 believes?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -334,7 +338,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 Linux experience, network knowledge, scripting abilities, information security and
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/adara/b3fdb5e9-f27d-481e-802b-27ba8a90a659'>ADARA - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/adara/b3fdb5e9-f27d-481e-802b-27ba8a90a659'>ADARA - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -428,7 +432,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Bengaluru  Bangalore Jakarta</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -447,10 +451,6 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999697390290-staff-site-reliability-engineer'>Optimizely Staff Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-15</p>
-<hr/>
-<h5><a href='https://careers.mozilla.org/position/gh/1916139/'>Senior Site Reliability Engineer ? Mozilla Jobs ? Open Positions</a></h5> 
-<p><span class="badge badge-light">Canada</span></p>
-<p>Posted on:: 2019-10-15</p>
 <hr/>
 
 
