--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -108,7 +108,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://seclab.cs.washington.edu/'>Security and Privacy Research Lab ? Paul G. Allen School of Computer Science &amp; Engineering, University of Washington</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seclab.cs.washington.edu/'>Security and Privacy Research Lab ? Paul G. Allen School of Computer Science &amp; Engineering, University of Washington</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
@@ -130,7 +130,7 @@ experience?...</p>
 <p><span class="badge badge-light">Los Angeles, California Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
-<h5><a href='https://www.gobiglaw.com/jobs/19075669-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP, in Boston, Massachusetts | GoBiglaw.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.gobiglaw.com/jobs/19075669-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP, in Boston, Massachusetts | GoBiglaw.com</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
@@ -194,7 +194,7 @@ trust?...</p>
 <p><span class="badge badge-light">Vleuten, Netherlands</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='http://validity.applytojob.com/apply/VGJCn12zXy/Privacy-Specialist'>Privacy Specialist - Validity - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://validity.applytojob.com/apply/VGJCn12zXy/Privacy-Specialist'>Privacy Specialist - Validity - Career Page</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -206,7 +206,7 @@ trust?...</p>
 <p><span class="badge badge-light">San Francisco Mountain View</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA Sugar Land, TX</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -244,7 +244,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Sr. Differential Privacy Research Engineer, Mozilla Corporation, Mountain View, 
 CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...</p>
@@ -282,7 +282,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/b91a4c3b-105c-4a48-90e4-436ecfbc28c3'>Geotab - Data Privacy Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/geotab/b91a4c3b-105c-4a48-90e4-436ecfbc28c3'>Geotab - Data Privacy Engineer</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -310,7 +310,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
